--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Registro al Evento</title>
   <style>
     body {
@@ -11,14 +11,12 @@
       padding: 0;
       background-color: #f4f4f4;
     }
-
     header {
       background-color: #3f51b5;
       color: white;
       padding: 20px;
       text-align: center;
     }
-
     main {
       max-width: 600px;
       margin: 40px auto;
@@ -26,27 +24,22 @@
       background: white;
       box-shadow: 0 0 10px rgba(0,0,0,0.1);
     }
-
     h1, h2 {
       text-align: center;
     }
-
     form {
       display: flex;
       flex-direction: column;
     }
-
     label {
       margin-top: 10px;
     }
-
     input, textarea {
       padding: 10px;
       margin-top: 5px;
       border: 1px solid #ccc;
       border-radius: 4px;
     }
-
     button {
       margin-top: 20px;
       padding: 12px;
@@ -56,11 +49,9 @@
       border-radius: 4px;
       cursor: pointer;
     }
-
     button:hover {
       background-color: #303f9f;
     }
-
     footer {
       text-align: center;
       padding: 20px;
@@ -78,7 +69,7 @@
 
   <main>
     <h2>Formulario de Registro</h2>
-    <form action="https://formsubmit.co/tucorreo@example.com" method="POST">
+    <form action="https://formspree.io/f/xanonrkn" method="POST">
       <label for="nombre">Nombre completo:</label>
       <input type="text" id="nombre" name="nombre" required>
 
