--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
   <h1>Registro al Evento</h1>
 
-  <form action="https://formspree.io/f/mnqkwxyz" method="POST">
+  <form action="https://formspree.io/f/xanonrkn" method="POST">
     <input type="text" name="nombre" placeholder="Nombre completo" required>
     <input type="email" name="email" placeholder="Correo electrónico" required>
 
