--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     body {
       margin: 0;
       font-family: Arial, sans-serif;
-      background-image: url('https://source.unsplash.com/1600x900/?event,people');
+      background-image: url('assets/img/apple-icon.png');
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
