--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       text-align: center;
       margin-bottom: 30px;
       text-shadow: 1px 1px 4px rgba(0,0,0,0.7);
+      color: #28a745; /* Color verde */
     }
 
     form {
@@ -47,7 +48,7 @@
     }
 
     button {
-      background-color: #007BFF;
+      background-color: #28a745; /* Color verde */
       color: #fff;
       font-weight: bold;
       border: none;
@@ -56,7 +57,7 @@
     }
 
     button:hover {
-      background-color: #0056b3;
+      background-color: #218838; /* Color verde más oscuro */
     }
 
     .disabled {
@@ -71,8 +72,8 @@
 
   <form id="registroForm" action="https://formspree.io/f/xanonrkn" method="POST">
     <input type="text" name="nombre" placeholder="Nombre completo" required>
-    <input type="email" name="email" placeholder="Correo electrónico" required>
     <input type="text" name="cedula" placeholder="Número de cédula" required pattern="\d+" title="Solo números">
+    <input type="email" name="email" placeholder="Correo electrónico" required>
 
     <!-- Ubicación -->
     <input type="hidden" name="latitud" id="latitud">
@@ -108,4 +109,3 @@
 
 </body>
 </html>
-
