--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
   <h1>Registro al Evento</h1>
 
-  <form id="registroForm" action="https://formspree.io/f/xanonrkn" method="POST">
+  <form id="registroForm" action="https://formspree.io/f/mjkwgvba" method="POST">
     <input type="text" name="nombre" placeholder="Nombre completo" required>
     <input type="text" name="cedula" placeholder="Número de cédula" required pattern="\d+" title="Solo números">
     <input type="email" name="email" placeholder="Correo electrónico" required>
